--- a/index.html
+++ b/index.html
@@ -11,169 +11,188 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header">
-      <nav class="header-navigator">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-two link">Studio</span></a
-        >
-        <ul class="header-list list">
-          <li class="link">
-            <a class="link header-list-item" href="./index.html">Studio</a>
-          </li>
-          <li class="link">
-            <a class="link header-list-item" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li class="link">
-            <a class="link header-list-item" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="adres-list list">
-          <li class="link">
-            <a class="link adres-list-item" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="link">
-            <a class="link adres-list-item" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-navigator">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-two link">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li class="link">
+              <a class="link header-list-item" href="./index.html">Studio</a>
+            </li>
+            <li class="link">
+              <a class="link header-list-item" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="link">
+              <a class="link header-list-item" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="adres-list list">
+            <li class="link">
+              <a class="link adres-list-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link">
+              <a class="link adres-list-item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main">
       <section class="section-one">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="button-order" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="button-order" type="button">Order Service</button>
+        </div>
       </section>
       <section class="section-two">
-        <h2 hidden class="hidden">Working Principles</h2>
-        <ul class="list">
-          <li class="section-two-item">
-            <h3 class="section-two-title">Strategy</h3>
-            <p class="section-two-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="section-two-item">
-            <h3 class="section-two-title">Punctuality</h3>
-            <p class="section-two-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="section-two-item">
-            <h3 class="section-two-title">Diligence</h3>
-            <p class="section-two-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="section-two-item">
-            <h3 class="section-two-title">Technologies</h3>
-            <p class="section-two-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden class="hidden">Working Principles</h2>
+          <ul class="list">
+            <li class="section-two-item">
+              <h3 class="section-two-title">Strategy</h3>
+              <p class="section-two-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="section-two-item">
+              <h3 class="section-two-title">Punctuality</h3>
+              <p class="section-two-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="section-two-item">
+              <h3 class="section-two-title">Diligence</h3>
+              <p class="section-two-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="section-two-item">
+              <h3 class="section-two-title">Technologies</h3>
+              <p class="section-two-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-three">
-        <h2 class="section-three-title">What are we doing</h2>
-        <ul class="list section-three-list">
-          <li class="section-three-img">
-            <img
-              src="./images/computer.jpg"
-              alt="computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="section-three-img">
-            <img
-              src="./images/phone.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="section-three-img">
-            <img
-              src="./images/phone_hand.jpg"
-              alt="phone in hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-three-title">What are we doing</h2>
+          <ul class="list section-three-list">
+            <li class="section-three-img">
+              <img
+                src="./images/computer.jpg"
+                alt="computer"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="section-three-img">
+              <img
+                src="./images/phone.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="section-three-img">
+              <img
+                src="./images/phone_hand.jpg"
+                alt="phone in hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-four">
-        <h2 class="section-four-title">Our Team</h2>
-        <ul class="list section-four-list">
-          <li class="section-four-item">
-            <img
-              class="section-four-img"
-              src="./images/img_people/mark.jpg"
-              alt="man"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-four-photo">Mark Guerrero</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li class="section-four-item">
-            <img
-              class="section-four-img"
-              src="./images/img_people/tom.jpg"
-              alt="man"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-four-photo">Tom Ford</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li class="section-four-item">
-            <img
-              class="section-four-img"
-              src="./images/img_people/cam.jpg"
-              alt="woman"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-four-photo">Camila Garcia</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li class="section-four-item">
-            <img
-              class="section-four-img"
-              src="./images/img_people/dan.jpg"
-              alt="man"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-four-photo">Daniel Wilson</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-four-title">Our Team</h2>
+          <ul class="list section-four-list">
+            <li class="section-four-item">
+              <img
+                class="section-four-img"
+                src="./images/img_people/mark.jpg"
+                alt="man"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-four-photo">Mark Guerrero</h3>
+              <p class="profession">Product Designer</p>
+            </li>
+            <li class="section-four-item">
+              <img
+                class="section-four-img"
+                src="./images/img_people/tom.jpg"
+                alt="man"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-four-photo">Tom Ford</h3>
+              <p class="profession">Frontend Developer</p>
+            </li>
+            <li class="section-four-item">
+              <img
+                class="section-four-img"
+                src="./images/img_people/cam.jpg"
+                alt="woman"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-four-photo">Camila Garcia</h3>
+              <p class="profession">Marketing</p>
+            </li>
+            <li class="section-four-item">
+              <img
+                class="section-four-img"
+                src="./images/img_people/dan.jpg"
+                alt="man"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-four-photo">Daniel Wilson</h3>
+              <p class="profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-two-footer link">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-two-footer link">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
