--- a/portfolio.html
+++ b/portfolio.html
@@ -15,191 +15,197 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigator">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-two link">Studio</span></a
-        >
-        <ul class="header-list list">
-          <li>
-            <a class="link header-list-item" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link header-list-item" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a class="link header-list-item" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="adres-list list">
-          <li>
-            <a
-              class="link adres-list-mail item"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link adres-list-tel item" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-navigator">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-two link">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li>
+              <a class="link header-list-item" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link header-list-item" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a class="link header-list-item" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="adres-list list">
+            <li>
+              <a
+                class="link adres-list-mail item"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link adres-list-tel item" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main">
       <section>
-        <h1 class="hidden" hidden>Page two</h1>
-        <ul class="list two-section-one-list">
-          <li>
-            <button class="link two-section-one-item-button" type="button">
-              All
-            </button>
-          </li>
-          <li>
-            <button class="link two-section-one-item-button" type="button">
-              Web Site
-            </button>
-          </li>
-          <li>
-            <button class="link two-section-one-item-button" type="button">
-              App
-            </button>
-          </li>
-          <li>
-            <button class="link two-section-one-item-button" type="button">
-              Design
-            </button>
-          </li>
-          <li>
-            <button class="link two-section-one-item-button" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-        <ul class="list two-section-list">
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/banking.jpg"
-                alt="banking"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Banking App Interface Concept</h2>
-              <p class="two-text">App</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/cashless.jpg"
-                alt="cashless"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Cashless Payment</h2>
-              <p class="two-text">Marketing</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/meditation.jpg"
-                alt="meditation"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Meditation App</h2>
-              <p class="two-text">App</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/taxi.jpg"
-                alt="taxi"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Taxi Service</h2>
-              <p class="two-text">Marketing</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/screen.jpg"
-                alt="screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Screen Illustrations</h2>
-              <p class="two-text">Design</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/online.jpg"
-                alt="online"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Online Courses</h2>
-              <p class="two-text">Marketing</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/instagram.jpg"
-                alt="instagram"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Instagram Stories Concept</h2>
-              <p class="two-text">Design</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/organic.jpg"
-                alt="organic"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Organic Food</h2>
-              <p class="two-text">Web Site</p>
-            </a>
-          </li>
-          <li class="two-section-item">
-            <a class="link" href="">
-              <img
-                src="./images/img_people/img_portfolio/fresh_coffee.jpg"
-                alt="coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="servise">Fresh Coffee</h2>
-              <p class="two-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="hidden" hidden>Page two</h1>
+          <ul class="list two-section-one-list">
+            <li>
+              <button class="link two-section-one-item-button" type="button">
+                All
+              </button>
+            </li>
+            <li>
+              <button class="link two-section-one-item-button" type="button">
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button class="link two-section-one-item-button" type="button">
+                App
+              </button>
+            </li>
+            <li>
+              <button class="link two-section-one-item-button" type="button">
+                Design
+              </button>
+            </li>
+            <li>
+              <button class="link two-section-one-item-button" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <ul class="list two-section-list">
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/banking.jpg"
+                  alt="banking"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Banking App Interface Concept</h2>
+                <p class="two-text">App</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/cashless.jpg"
+                  alt="cashless"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Cashless Payment</h2>
+                <p class="two-text">Marketing</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/meditation.jpg"
+                  alt="meditation"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Meditation App</h2>
+                <p class="two-text">App</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/taxi.jpg"
+                  alt="taxi"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Taxi Service</h2>
+                <p class="two-text">Marketing</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/screen.jpg"
+                  alt="screen"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Screen Illustrations</h2>
+                <p class="two-text">Design</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/online.jpg"
+                  alt="online"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Online Courses</h2>
+                <p class="two-text">Marketing</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/instagram.jpg"
+                  alt="instagram"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Instagram Stories Concept</h2>
+                <p class="two-text">Design</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/organic.jpg"
+                  alt="organic"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Organic Food</h2>
+                <p class="two-text">Web Site</p>
+              </a>
+            </li>
+            <li class="two-section-item">
+              <a class="link" href="">
+                <img
+                  src="./images/img_people/img_portfolio/fresh_coffee.jpg"
+                  alt="coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="servise">Fresh Coffee</h2>
+                <p class="two-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-two-footer link">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-two-footer link">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
