--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
 
   <body>
     <header class="header">
-      <div class="container">
-        <nav class="header-navigator">
+      <div class="container hed">
+        <nav class="header-navigator header-list">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-two link">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="link">
+            <li class="link header-item">
               <a class="link header-list-item" href="./index.html">Studio</a>
             </li>
-            <li class="link">
+            <li class="link header-item">
               <a class="link header-list-item" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="link">
+            <li class="link header-item">
               <a class="link header-list-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="adres-list list">
-            <li class="link">
+          <ul class="adres-list list header-list">
+            <li class="link header-item">
               <a class="link adres-list-item" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="link">
+            <li class="link header-item">
               <a class="link adres-list-item" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -103,7 +103,7 @@
       <section class="section-three">
         <div class="container">
           <h2 class="section-three-title">What are we doing</h2>
-          <ul class="list section-three-list">
+          <ul class="list section-three-list img-list-one">
             <li class="section-three-img">
               <img
                 src="./images/computer.jpg"
@@ -134,7 +134,7 @@
       <section class="section-four">
         <div class="container">
           <h2 class="section-four-title">Our Team</h2>
-          <ul class="list section-four-list">
+          <ul class="list section-four-list img-list-one">
             <li class="section-four-item">
               <img
                 class="section-four-img"
@@ -184,7 +184,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container foot">
         <a class="logo link" href="./index.html"
           >Web<span class="logo-two-footer link">Studio</span></a
         >
