--- a/portfolio.html
+++ b/portfolio.html
@@ -15,36 +15,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav class="header-navigator">
+      <div class="container hed">
+        <nav class="header-navigator header-list">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-two link">Studio</span></a
           >
           <ul class="header-list list">
-            <li>
+            <li class="link header-item">
               <a class="link header-list-item" href="./index.html">Studio</a>
             </li>
-            <li>
+            <li class="link header-item">
               <a class="link header-list-item" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li>
+            <li class="link header-item">
               <a class="link header-list-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
-          <ul class="adres-list list">
-            <li>
-              <a
-                class="link adres-list-mail item"
-                href="mailto:info@devstudio.com"
+          <ul class="adres-list list header-list">
+            <li class="link header-item">
+              <a class="link adres-list-item" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a class="link adres-list-tel item" href="tel:+110001111111"
+            <li class="link header-item">
+              <a class="link adres-list-item" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -56,7 +54,7 @@
       <section>
         <div class="container">
           <h1 class="hidden" hidden>Page two</h1>
-          <ul class="list two-section-one-list">
+          <ul class="list two-section-one-list button-two">
             <li>
               <button class="link two-section-one-item-button" type="button">
                 All
@@ -83,7 +81,7 @@
               </button>
             </li>
           </ul>
-          <ul class="list two-section-list">
+          <ul class="list two-section-list img-list-two">
             <li class="two-section-item">
               <a class="link" href="">
                 <img
