--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
     <main class="main">
       <section class="section-one">
         <div class="container">
-          <h1 class="title">Effective Solutions for Your Business</h1>
+          <h1 class="title title-one-page">
+            Effective Solutions for Your Business
+          </h1>
           <button class="button-order" type="button">Order Service</button>
         </div>
       </section>
       <section class="section-two">
         <div class="container">
           <h2 hidden class="hidden">Working Principles</h2>
-          <ul class="list">
+          <ul class="list sec-two">
             <li class="section-two-item">
               <h3 class="section-two-title">Strategy</h3>
               <p class="section-two-text">
