--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <main class="main">
       <section class="section-one">
-        <div class="container">
+        <div class="container sec-one">
           <h1 class="title title-one-page">
             Effective Solutions for Your Business
           </h1>
@@ -187,7 +187,7 @@
     </main>
     <footer class="footer">
       <div class="container foot">
-        <a class="logo link" href="./index.html"
+        <a class="logo logo-down link" href="./index.html"
           >Web<span class="logo-two-footer link">Studio</span></a
         >
         <p class="footer-text">
