--- a/portfolio.html
+++ b/portfolio.html
@@ -196,7 +196,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html"
+        <a class="logo logo-down link" href="./index.html"
           >Web<span class="logo-two-footer link">Studio</span></a
         >
         <p class="footer-text">
