--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </div>
       </section>
       <section class="section-two">
-        <div class="container">
+        <div class="container sec-two">
           <h2 hidden class="hidden">Working Principles</h2>
-          <ul class="list sec-two">
+          <ul class="list sec-two-list">
             <li class="section-two-item">
               <h3 class="section-two-title">Strategy</h3>
               <p class="section-two-text">
@@ -145,8 +145,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-four-photo">Mark Guerrero</h3>
-              <p class="profession">Product Designer</p>
+              <div class="sec-four-over">
+                <h3 class="section-four-photo">Mark Guerrero</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
             <li class="section-four-item">
               <img
@@ -156,8 +158,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-four-photo">Tom Ford</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="sec-four-over">
+                <h3 class="section-four-photo">Tom Ford</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-four-item">
               <img
@@ -167,8 +171,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-four-photo">Camila Garcia</h3>
-              <p class="profession">Marketing</p>
+              <div class="sec-four-over">
+                <h3 class="section-four-photo">Camila Garcia</h3>
+                <p class="profession">Marketing</p>
+              </div>
             </li>
             <li class="section-four-item">
               <img
@@ -178,8 +184,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-four-photo">Daniel Wilson</h3>
-              <p class="profession">UI Designer</p>
+              <div class="sec-four-over">
+                <h3 class="section-four-photo">Daniel Wilson</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
