--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -90,8 +97,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Banking App Interface Concept</h2>
-                <p class="two-text">App</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Banking App Interface Concept</h2>
+                  <p class="two-text">App</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -102,8 +111,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Cashless Payment</h2>
-                <p class="two-text">Marketing</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Cashless Payment</h2>
+                  <p class="two-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -114,8 +125,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Meditation App</h2>
-                <p class="two-text">App</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Meditation App</h2>
+                  <p class="two-text">App</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -126,8 +139,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Taxi Service</h2>
-                <p class="two-text">Marketing</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Taxi Service</h2>
+                  <p class="two-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -138,8 +153,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Screen Illustrations</h2>
-                <p class="two-text">Design</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Screen Illustrations</h2>
+                  <p class="two-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -150,8 +167,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Online Courses</h2>
-                <p class="two-text">Marketing</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Online Courses</h2>
+                  <p class="two-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -162,8 +181,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Instagram Stories Concept</h2>
-                <p class="two-text">Design</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Instagram Stories Concept</h2>
+                  <p class="two-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -174,8 +195,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Organic Food</h2>
-                <p class="two-text">Web Site</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Organic Food</h2>
+                  <p class="two-text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="two-section-item">
@@ -186,8 +209,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="servise">Fresh Coffee</h2>
-                <p class="two-text">Web Site</p>
+                <div class="page-two-over">
+                  <h2 class="servise">Fresh Coffee</h2>
+                  <p class="two-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -195,7 +220,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container foot">
         <a class="logo logo-down link" href="./index.html"
           >Web<span class="logo-two-footer link">Studio</span></a
         >
